# WeatherBaseStation

./: CMakeLists.txt  LICENSE
qml/: CMakeLists.txt  main.qml
src/: CMakeLists.txt  main.cpp
